# poetry-tree

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.py  commands.py  data.pickle  docker-compose.yaml  pyproject.toml  requirements.txt  results.csv  test.py
.dvc/: config
.github/workflows/: main.yml
config/: config.yaml
data/: data.txt.dvc
model_repository/ensemble-onnx/: config.pbtxt
model_repository/onnx-model/: config.pbtxt
model_repository/onnx-model/1/: model.onnx.dvc
model_repository/python-tokenizer/: config.pbtxt
model_repository/python-tokenizer/1/: model.py
models/: .gitignore  data.pickle.dvc  eng_vocab.pickle.dvc  model.onnx.dvc  model.pt.dvc  rus_vocab.pickle.dvc
poetry_tree/: assignment0_04_decision_tree_solved.py  client.py  config.py  infer.py  main.py  run_onnx.py  train.py  transformer.py  tree.py
results/: .gitignore  result.csv.dvc  sources.txt  sources.txt.dvc  translations.txt  translations.txt.dvc
