[tool.poetry]
name = "poetry-tree"
version = "0.1.0"
description = ""
authors = ["Evgeny <gfmnlk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = "^1.3.1"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
fire = "^0.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
dvc = "^3.28.0"
dvc-gdrive = "^2.20.0"

[tool.flake8]
max-line-length = 130
ignore = ["E501", "W503"]

[tool.black]
line-length = 80

[tool.isort]
src_paths = ["poetry_tree"]
profile = "black"
line_length = 80
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
