[tool.poetry]
name = "poetry-tree"
version = "0.1.0"
description = ""
authors = ["Evgeny <gfmnlk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = "^1.3.1"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
fire = "^0.5.0"
hydra-core = "^1.3.2"
torch = {version = "2.1.0", source = "pytorch"}
torchdata = {version = "0.7.0", source = "pytorch"}
torchtext = {version = "0.16.0", source = "pytorch"}
spacy = "^3.7.2"
spacy-download = "^1.1.0"
mlflow = "^2.8.1"
gitpython = "^3.1.40"
onnx = "^1.15.0"
onnxruntime = "^1.16.3"
onnxscript = "^0.1.0.dev20231203"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
dvc = "^3.28.0"
dvc-gdrive = "^2.20.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.flake8]
max-line-length = 130
ignore = ["E501", "W503"]

[tool.black]
line-length = 80

[tool.isort]
src_paths = ["poetry_tree"]
profile = "black"
line_length = 80
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
